Fixed vertical stretching of photo dialog when images are shown at full-res

--- a/fluxtream-web/src/main/webapp/css/bodytrack.css
+++ b/fluxtream-web/src/main/webapp/css/bodytrack.css
@@ -413,7 +413,7 @@
   height: auto;
 }
 
-._timeline_photo_dialog_photo_table {
+#_timeline_photo_dialog_photo_table {
   min-width: 300px;
   min-height: 300px;
   width: 300px;
